# 15gifts_task

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
src/fifteen_gifts_task/: extractor.py  loader.py
src/fifteen_gifts_task/models/: data_models.py  table_models.py
src/fifteen_gifts_task/resources/: singleton.json
src/fifteen_gifts_task/transformer/: base.py  extras_transformer.py  handset_colour_transformer.py  handset_tariff_transformer.py  handset_transformer.py
